<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.newpost.NewPostActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_newpost_toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/menu_newpost_toolbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_newpost_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_newpost_toolbar"
            tools:listitem="@layout/item_newpost_image" />

        <EditText
            android:id="@+id/et_newpost_contents"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:layout_marginTop="14dp"
            android:gravity="top"
            android:padding="10dp"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_newpost_image" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_newpost_tag_user_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_newpost_contents">

            <View
                android:id="@+id/view_newpost_devider1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_newpost_user_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="11dp"
                android:src="@drawable/ic_newpost_user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_newpost_tag_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/newpost_user_button_text"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/iv_newpost_user_icon"
                app:layout_constraintStart_toEndOf="@id/iv_newpost_user_icon"
                app:layout_constraintTop_toTopOf="@id/iv_newpost_user_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_newpost_location_add_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_newpost_tag_user_button">

            <View
                android:id="@+id/view_newpost_devider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_newpost_location_add_button_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="11dp"
                android:src="@drawable/ic_newpost_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_newpost_add_location_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/newpost_add_location_button_text"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/iv_newpost_location_add_button_icon"
                app:layout_constraintStart_toEndOf="@id/iv_newpost_location_add_button_icon"
                app:layout_constraintTop_toTopOf="@id/iv_newpost_location_add_button_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_newpost_sharing_facebook_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_newpost_location_add_button">

            <View
                android:id="@+id/view_newpost_devider3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_newpost_sharing_facebook_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="11dp"
                android:src="@drawable/ic_newpost_share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_newpost_sharing_facebook_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/newpost_sharing_facebook_button_text"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/iv_newpost_sharing_facebook_icon"
                app:layout_constraintStart_toEndOf="@id/iv_newpost_sharing_facebook_icon"
                app:layout_constraintTop_toTopOf="@id/iv_newpost_sharing_facebook_icon" />

            <Switch
                android:id="@+id/switch_newpost_sharing_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_newpost_setting_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_newpost_sharing_facebook_button">

            <View
                android:id="@+id/view_newpost_devider4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_newpost_setting_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="11dp"
                android:src="@drawable/ic_newpost_setting"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_newpost_setting_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/newpost_setting_button_text"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/iv_newpost_setting_icon"
                app:layout_constraintStart_toEndOf="@id/iv_newpost_setting_icon"
                app:layout_constraintTop_toTopOf="@id/iv_newpost_setting_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>