<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/sv_dm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/layout_dm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_dm"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:layout_marginTop="26dp"
                    app:contentInsetStart="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/btn_dm_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="24dp"
                        android:background="@null"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_back"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_home_searchbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">


                        <TextView
                            android:id="@+id/tv_dm_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="56dp"
                            android:layout_marginStart="-29dp"
                            android:background="@null"
                            android:contentDescription="@null"
                            android:text="@string/gosopt_cds_app1"
                            android:textSize="26sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                        <ImageView
                            android:id="@+id/iv_dm_vector"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="3dp"
                            android:layout_marginTop="13dp"
                            android:background="@drawable/ic_vector"
                            android:contentDescription="@null"
                            android:paddingTop="5dp"
                            android:paddingBottom="1dp"
                            app:layout_constraintStart_toEndOf="@+id/tv_dm_title"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/iv_dm_newdm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/ic_newdm"
                        android:contentDescription="@null"
                        android:paddingTop="5dp"
                        android:paddingBottom="1dp"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


                </androidx.appcompat.widget.Toolbar>

                <ImageView
                    android:id="@+id/iv_dm_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_dm_search" />


                <TextView
                    android:id="@+id/tv_dm_starred"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/starred"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_dm_starred"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/tv_home_editor_title"
                    tools:listitem="@layout/item_dm_starred" />

                <TextView
                    android:id="@+id/tv_dm_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/message"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_dm_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/tv_home_editor_title"
                    tools:listitem="@layout/item_dm_message" />


            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>